- removed automatic download and build of Bliss during cmake configuration when -DSYM=(s)bliss;
  please build and install from https://github.com/scipopt/bliss before and specify -DBLISS_DIR
- replaced `SANITIZE_XYZ=(on|off)` options by `SANITIZE=(on|off|thread|address|memory)`;
  undefined behavior sanitizer is always enabled if not `SANITIZE=off`

Fixed bugs
----------

- fixed bug related to unreleased data for the Benders' decomposition framework. When reading an SMPS file and applying
  Benders' decomposition, data is created that was not correctly released. Also, data within the Benders' decomposition
  framework was not appropriately reset. The data is now released/reset as expected.

Miscellaneous
-------------
- We now use sassy as shipped with dejavu.

- add objective offset instead of objective offset variable in cip reader
- updated ampl/mp to v4.0.0
- removed 4th number in SCIP version; new format is major.minor.patch

Known bugs
----------

@page RN9 Release notes for SCIP 9

@section RN930 SCIP 9.3.0
*************************

Features
--------

- simplify expressions of nonlinear constraints in MPS and LP writing to increase chance that they are recognized as quadratic

Performance improvements
------------------------

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### New API functions
- SCIPdisplaySymmetryGenerators() and SCIPdialogExecDisplaySymmetry() to display generators of symmetry group

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Fixed bugs
----------

Miscellaneous
-------------

- updated description of paramater misc/usesymmetry

@section RN922 SCIP 9.2.2
*************************

Fixed bugs
----------

- fixed definition of slack variables of >= constraints and ranged rows in LP interface to Gurobi (lpi_grb.c)