@@ -31,6 +31,7 @@ if(NOT LIBM)
 endif()
 
 target_link_libraries(coloring ${SCIP_LIBRARIES} ${LIBM})
+target_compile_options(coloring PRIVATE ${SCIP_COMPILE_FLAGS})
 
 if( TARGET applications )
     add_dependencies( applications coloring )
