@@ -1118,12 +1118,11 @@ include(GenerateExportHeader)
 generate_export_header(libscip BASE_NAME scip EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/scip/scip_export.h)
 target_compile_definitions(scip PRIVATE SCIP_STATIC_DEFINE)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    if (SANITIZE)
-       find_package(Sanitizers)
-       add_sanitizers(libscip)
-       add_sanitizers(scip)
-    endif()
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND SANITIZE)
+    find_package(Sanitizers)
+    add_sanitizers(libscip)
+    add_sanitizers(scip)
+    get_target_property(CONF_SANITIZE_FLAGS libscip SANITIZE_FLAGS)
 endif()
 
 target_link_libraries(scip
